Display basic data and description in event details view
